--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,7 +16,7 @@
         </li>
 
         <li>
-            <a href="{{ site.url }}/projects/">Side Projects</a>
+            <a href="{{ site.url }}/projects/">Projects</a>
         </li>
 
         {% if site.owner.linkedin %}
