--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,6 +64,6 @@
   </div>
 </footer>
 
-<!-- <script src="{{ " /js/jquery.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/jquery.min.js " | prepend: site.baseurl }}"></script>
 <script src="{{ " /js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
-<script src="{{ " /js/clean-blog.min.js " | prepend: site.baseurl }}"></script> -->
+<script src="{{ " /js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
